changed jwt package and smtg else
