# docs/swagger.yaml
@@ -1,5 +1,64 @@
 basePath: /
 definitions:
+  core.Petition:
+    properties:
+      answer:
+        type: string
+      date:
+        type: string
+      id:
+        type: integer
+      text:
+        type: string
+      timeend:
+        type: string
+      title:
+        type: string
+    required:
+    - date
+    - text
+    - timeend
+    - title
+    type: object
+  core.Sub:
+    properties:
+      date:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      userId:
+        type: string
+    required:
+    - date
+    type: object
+  core.UpdatePetitionInput:
+    properties:
+      answer:
+        type: string
+      date:
+        type: string
+      text:
+        type: string
+      timeend:
+        type: string
+      title:
+        type: string
+    type: object
+  core.User:
+    properties:
+      grade:
+        type: string
+      name:
+        type: string
+      password:
+        type: string
+    required:
+    - grade
+    - name
+    - password
+    type: object
   handlers.checkSignatureResponse:
     properties:
       signed:
@@ -24,14 +83,14 @@ definitions:
     properties:
       data:
         items:
-          $ref: '#/definitions/petitions.Petition'
+          $ref: '#/definitions/core.Petition'
         type: array
     type: object
   handlers.getAllSubsResponses:
     properties:
       data:
         items:
-          $ref: '#/definitions/petitions.Sub'
+          $ref: '#/definitions/core.Sub'
         type: array
     type: object
   handlers.idResponse:
@@ -58,65 +117,6 @@ definitions:
     properties:
       status:
         type: string
-    type: object
-  petitions.Petition:
-    properties:
-      answer:
-        type: string
-      date:
-        type: string
-      id:
-        type: integer
-      text:
-        type: string
-      timeend:
-        type: string
-      title:
-        type: string
-    required:
-    - date
-    - text
-    - timeend
-    - title
-    type: object
-  petitions.Sub:
-    properties:
-      date:
-        type: string
-      id:
-        type: integer
-      name:
-        type: string
-      userId:
-        type: string
-    required:
-    - date
-    type: object
-  petitions.UpdatePetitionInput:
-    properties:
-      answer:
-        type: string
-      date:
-        type: string
-      text:
-        type: string
-      timeend:
-        type: string
-      title:
-        type: string
-    type: object
-  petitions.User:
-    properties:
-      grade:
-        type: string
-      name:
-        type: string
-      password:
-        type: string
-    required:
-    - grade
-    - name
-    - password
     type: object
 host: localhost:8080
 info:
@@ -244,7 +244,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/petitions.Petition'
+            $ref: '#/definitions/core.Petition'
         "400":
           description: Bad Request
           schema:
@@ -278,7 +278,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/petitions.UpdatePetitionInput'
+          $ref: '#/definitions/core.UpdatePetitionInput'
       produces:
       - application/json
       responses:
@@ -492,7 +492,7 @@ paths:
         name: input
         required: true
         schema:
-          $ref: '#/definitions/petitions.User'
+          $ref: '#/definitions/core.User'
       produces:
       - application/json
       responses:
